--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           </ul>
         </nav>
         <address class="heder-address">
-          <ul class="heder-adresss-list list">
+          <ul class="heder-address-list list">
             <li class="heder-address-item">
               <a
                 class="heder-address-link link"
@@ -50,6 +50,77 @@
             </li>
           </ul>
         </address>
+        <button type="button" class="button open-menu-btn">
+          <svg width="24" height="24">
+            <use href="/images/icons.svg#icon-heroicons-solid_menu-1"></use>
+          </svg>
+        </button>
+      </div>
+      <!-- is-open -->
+      <div class="mob-menu ">
+        <button type="button" class="mob-close-btn">
+          <svg width="8" height="8"><use href="./images/icons.svg#icon-close-black-18dp-2-1-1"></use>
+          </svg>
+        </button>
+        <nav class="mob-novigation">
+          <ul class="mob-menu-list">
+            <li class="mob-menu-item">
+              <a class="mob-menu-link" href="./index.html">Studio</a>
+            </li>
+            <li class="mob-menu-item" >
+              <a class="mob-menu-link" href="">Pirtfolio</a>
+            </li>
+            <li class="mob-menu-item">
+              <a class="mob-menu-link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="mob-address">
+          <ul class="mob-address-list">
+            <li class="mob-address-item">
+              <a class="mob-address-link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+              <li class="mob-address-item">
+                <a class="mob-address-link"href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+              </li>
+            </li>
+          </ul>
+        </address>
+        <div class="mob-icons">
+          <ul class="mob-icon-list">
+            <li class="mob-icon-item">
+              <a class="mob-icon-link" href="">
+                <svg width="24" height="24" class="mob-icon">
+                  <use href="./images/icons.svg#icon-instagram-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="mob-icon-item">
+              <a class="mob-icon-link" href="">
+                <svg width="24" height="24" class="mob-icon">
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="mob-icon-item">
+              <a class="mob-icon-link" href="">
+                <svg width="24" height="24" class="mob-icon">
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="mob-icon-item">
+              <a class="mob-icon-link" href="">
+                <svg width="24" height="24" class="mob-icon">
+                  <use href="./images/icons.svg#icon-linkedin-1"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </header>
     <main>
@@ -119,7 +190,7 @@
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list list">
             <li class="team-item">
-              <img
+              <img class="our-team-img"
                 src="./images/img-3.jpg"
                 alt="Photo Product Designer"
                 width="264"
@@ -161,7 +232,7 @@
               </div>
             </li>
             <li class="team-item">
-              <img
+              <img class="our-team-img"
                 src="./images/img-2.jpg"
                 alt="Photo Frontend Developer"
                 width="264"
@@ -203,7 +274,7 @@
               </div>
             </li>
             <li class="team-item">
-              <img
+              <img class="our-team-img"
                 src="./images/img-1.jpg"
                 alt="Photo Marketing"
                 width="264"
@@ -245,7 +316,7 @@
               </div>
             </li>
             <li class="team-item">
-              <img
+              <img class="our-team-img"
                 src="./images/img.jpg"
                 alt="Photo UI Designer"
                 width="264"
@@ -295,12 +366,23 @@
           <ul class="portfolio-list list">
             <li class="portfolio-item-list">
               <div class="portfolio-list-wrap">
-                <img
-                  src="./images/Portfolio1.jpg"
+                <picture>
+                  <source srcset="./images/Portfolio1-page.jpg 1x, ./images/Portfolio1-page-2x.jpg 2x"
+                  media="(min-width: 1158px)"
+                  />
+                  <source srcset="./images/Portfolio1-tab.jpg 1x, ./images/Portfolio1-tab-2x.jpg 2x"
+                  media="(min-width: 768px)"
+                  />
+                  <source srcset="./images/Portfolio1-mob.jpg 1x, ./images/Portfolio1-mob-2x.jpg"
+                  media="(max-width: 767px)"
+                  />
+                  <img class="portfolio-img"
+                  src="./images/Portfolio1-page.jpg"
                   alt="Banking App"
                   width="360"
                   height="300"
                 />
+                </picture>
                 <p class="portfolio-hover-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -314,12 +396,23 @@
             </li>
             <li class="portfolio-item-list">
               <div class="portfolio-list-wrap">
-                <img
-                  src="./images/Portfolio2.jpg"
+                <picture>
+                  <source srcset="./images/Portfolio2-page.jpg 1x, ./images/Portfolio2-page-2x.jpg 2x"
+                  media="(min-width: 1158px)"
+                  />
+                  <source srcset="./images/Portfolio2-tab.jpg 1x, ./images/Portfolio2-tab-2x.jpg 2x"
+                  media="(min-width: 768px)"
+                  />
+                  <source srcset="./images/Portfolio2-mob.jpg 1x, ./images/Portfolio2-mob-2x.jpg 2x"
+                  media="(max-width: 767px)"
+                  />
+                  <img class="portfolio-img"
+                  src="./images/Portfolio2-page.jpg"
                   alt="Cashless Payment"
                   width="360"
                   height="300"
                 />
+                </picture>
                 <p class="portfolio-hover-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -333,12 +426,23 @@
             </li>
             <li class="portfolio-item-list">
               <div class="portfolio-list-wrap">
-                <img
-                  src="./images/Portfolio3.jpg"
+                <picture>
+                  <source srcset="./images/Portfolio3-page.jpg 1x, ./images/Portfolio3-page-2x.jpg 2x"
+                  media="(min-width: 1158px)"
+                  />
+                  <source srcset="./images/Portfolio3-tab.jpg 1x, ./images/Portfolio3-tab-2x.jpg 2x"
+                  media="(min-width: 768px)"
+                  />
+                  <source srcset="./images/Portfolio3-mob.jpg 1x, ./images/Portfolio3-mob-2x.jpg 2x"
+                  media="(max-width: 767px)"
+                  />
+                 <img class="portfolio-img"
+                  src="./images/Portfolio3-page.jpg"
                   alt="Meditation App"
                   width="360"
                   height="300"
                 />
+                </picture>
                 <p class="portfolio-hover-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -352,12 +456,23 @@
             </li>
             <li class="portfolio-item-list">
               <div class="portfolio-list-wrap">
-                <img
-                  src="./images/Portfolio4.jpg"
+                <picture>
+                  <source srcset="./images/Portfolio4-page.jpg 1x, ./images/Portfolio4-page-2x.jpg 2x"
+                  media="(min-width: 1158px)"
+                  />
+                  <source srcset="./images/Portfolio4-tab.jpg 1x, ./images/Portfolio4-tab-2x.jpg 2x"
+                  media="(min-width: 768px)"
+                  />
+                  <source srcset="./images/Portfolio4-mob.jpg 1x, ./images/Portfolio4-mob-2x.jpg 2x"
+                  media="(max-width: 767px)"
+                  />
+                 <img class="portfolio-img"
+                  src="./images/Portfolio4-page.jpg"
                   alt="Taxi Service"
                   width="360"
                   height="300"
                 />
+                </picture>
                 <p class="portfolio-hover-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -371,12 +486,23 @@
             </li>
             <li class="portfolio-item-list">
               <div class="portfolio-list-wrap">
-                <img
-                  src="./images/Portfolio5.jpg"
+                <picture>
+                  <source srcset="./images/Portfolio5-page.jpg 1x, ./images/Portfolio5-page-2x.jpg 2x"
+                  media="(min-width: 1158px)"
+                  />
+                  <source srcset="./images/Portfolio5-tab.jpg 1x, ./images/Portfolio5-tab-2x.jpg 2x"
+                  media="(min-width: 768px)"
+                  />
+                  <source srcset="./images/Portfolio5-mob.jpg 1x, ./images/Portfolio5-mob-2x.jpg 2x"
+                  media="(max-width: 767px)"
+                  />
+                <img class="portfolio-img"
+                  src="./images/Portfolio5-page.jpg"
                   alt="Screen Illustrations"
                   width="360"
                   height="300"
                 />
+                </picture>
                 <p class="portfolio-hover-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -390,12 +516,23 @@
             </li>
             <li class="portfolio-item-list">
               <div class="portfolio-list-wrap">
-                <img
-                  src="./images/Portfolio6.jpg"
+                <picture>
+                  <source srcset="./images/Portfolio6-page.jpg 1x, ./images/Portfolio6-page-2x.jpg 2x"
+                  media="(min-width: 1158px)"
+                  />
+                  <source srcset="./images/Portfolio6-tab.jpg 1x, ./images/Portfolio6-tab-2x.jpg 2x"
+                  media="(min-width: 768px)"
+                  />
+                  <source srcset="./images/Portfolio6-mob.jpg 1x, ./images/Portfolio6-mob-2x.jpg 2x"
+                  media="(max-width: 767px)"
+                  />
+                <img class="portfolio-img"
+                  src="./images/Portfolio6-page.jpg"
                   alt="Online Courses"
                   width="360"
                   height="300"
                 />
+                </picture>
                 <p class="portfolio-hover-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
