--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <!-- is-open -->
       <div class="mob-menu ">
         <button type="button" class="mob-close-btn">
-          <svg width="8" height="8"><use href="./images/icons.svg#icon-close-black-18dp-2-1-1"></use>
+          <svg class="icon-close" width="8" height="8"><use href="./images/icons.svg#icon-close-black-18dp-2-1-1"></use>
           </svg>
         </button>
         <nav class="mob-novigation">
@@ -75,6 +75,7 @@
             </li>
           </ul>
         </nav>
+        <div class="mob-title">
         <address class="mob-address">
           <ul class="mob-address-list">
             <li class="mob-address-item">
@@ -121,6 +122,7 @@
             </li>
           </ul>
         </div>
+      </div>
       </div>
     </header>
     <main>
@@ -622,7 +624,7 @@
             <use href="./images/icons.svg#icon-close-black-18dp-2-1-1"></use>
           </svg>
         </button>
-        <p class="modal-title">Leave your contacts and we will call you back</p>
+      <p class="modal-title">Leave your contacts and we will call you back</p>
         <form class="modal-form">
           <div class="modal-field">
             <label for="user-name" class="modal-label">Name</label>
@@ -693,9 +695,11 @@
                   <use href="./images/icons.svg#icon-Vector-1"></use>
                 </svg>
               </span>
+              <div class="form-check">
               I accept the terms and conditions of the
-              <a href="" class="space">Privacy Policy</a></label
+              <a href=""class="space">Privacy Policy</a></label
             >
+            </div>
           </div>
           <button class="sumbit-btn" type="submit">Send</button>
         </form>
